--- a/index.css
+++ b/index.css
@@ -1,18 +1,25 @@
 * {
-	box-sizing: border-box;
-}
-
-html, body {
-	font-family: 'Spicy Rice', cursive;
-	padding: 0;
-	margin: 0;
-    background-color: #ffffff;
+    box-sizing: border-box;
 }
 
 html {
+    font-family: 'Spicy Rice', cursive;
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
     display: grid;
-    grid-template-rows: 2fr 5fr 1fr;
-    grid-template-columns: 1fr;
+    position: absolute;
+    grid-template-rows: 1 auto auto auto;
+    grid-template-columns: 1 1;
+    background-color: #ffffff;
+    background-image: linear-gradient(white, white, transparent), url("project_images/perspective-grid-background-vector.jpg");
+    height: 100vh;
+    width: 100vw;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
 }
 
 p {
@@ -21,88 +28,117 @@ p {
 }
 
 .header {
-	grid-row: 1 / 2;
-	justify-self: center;
-    align-self: center;
-    border: 1px solid black;
-    text-align: center;
-}
-
-.main_content {
-	grid-row: 2 / 3;
-	justify-self: center;
-    align-self: center;
-    border: 1px solid black;
-    display: grid;
-    grid-template-rows: 1fr 5fr;
-    grid-template-columns: 1fr 3fr 1fr;
-    justify-content: center;
-    align-content: center;
-}
-
-.footer {
-	grid-row: 3 / 4;
-	justify-self: center;
-    align-self: center;
-    border: 1px solid black;
-    text-align: center;
-}
-
-.digital_clocks {
+    background-color: rgb(90, 156, 75);
     grid-row: 1 / 2;
-    grid-column: 1 / 4;
+    grid-column: 1 / 3;
 	justify-self: stretch;
     align-self: stretch;
-    border: 1px solid black;
+    text-align: center;
     display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    align-content: center;
+    grid-template-columns: 1 1;
+    font-size: 3em;
 }
 
-.analog_clock {
-    grid-row: 2 / 3;
+.title {
+    grid-column: 1 / 3;
+    justify-self: center;
+    text-shadow: 2px 2px 5px rgba(0, 210, 225, 0.5);
+    text-decoration: underline;
+}
+
+.bsd {
     grid-column: 2 / 3;
-	justify-self: stretch;
-    align-self: stretch;
-    border: 1px solid black;
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-content: center;
-}
-
-.aside_time_info {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
-	justify-self: center;
-    align-self: center;
-    border: 1px solid black;
+    justify-self: end;
+    font-size: .3em;
+    padding: 5px;
 }
 
 .regular_digital_clock {
-	grid-column: 1 / 2;
-	justify-self: center;
-    align-self: center;
-    border: 1px solid black;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+	justify-self: stretch;
+    align-self: stretch;
+    font-size: 2em;
+    text-align: center;
+    padding-top: 20px;
+    background-image: linear-gradient(rgb(90, 156, 75), rgba(0, 210, 225, 0.3), transparent);
 }
 
 .talmudic_digital_clock {
+    grid-row: 2 / 3;
 	grid-column: 2 / 3;
-	justify-self: center;
-    align-self: center;
-    border: 1px solid black;
+	justify-self: stretch;
+    align-self: stretch;
+    font-size: 2em;
+    text-align: center;
+    padding-top: 20px;
+    background-image: linear-gradient(rgb(90, 156, 75), rgba(0, 210, 225, 0.3), transparent);
 }
 
+.analog_clock {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+	justify-self: center;
+    align-self: start;
+    display: grid;
+    grid-template-rows: 1;
+    grid-template-columns: 1;
+}
+
+.footer {
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+	justify-self: stretch;
+    align-self: stretch;
+    padding: 5px;
+    font-size: 1em;
+    display: grid;
+    grid-template-rows: 1fr;
+}
+
+.talmudicTimeDisplay {
+    color: rgba(0, 0, 0, .5)
+}
+
+.regularTimeDisplay {
+    color: rgba(0, 0, 0, .5)
+}
+
+.settings {
+    background-image: url("project_images/steampunk-gear-clock.png");
+    background-color: transparent;
+    height: 50px;
+    width: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    grid-row: 1 / 2;
+    justify-self: end;
+    align-self: end;
+    border: transparent;
+}
 
 /*canvas*/
 
 #canvas {
-    background-color: white;
-    grid-row: 1 / 3;
-    grid-column: 1 / 3;
-	justify-self: center;
-    align-self: center;
+    background-color: rgba(255, 255, 255, 0.0);
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    width: auto;
+    height: auto;
+}
+
+@media only screen and (max-width: 400px) {
+    .header {
+        font-size: 2em;
+    }
+
+    .digital_clocks {
+        font-size: 1em;
+    }
+
+    #canvas {
+        width: 200px;
+        height: 200px;
+    }
 }
