--- a/index.css
+++ b/index.css
@@ -1,18 +1,17 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 html {
     font-family: 'Spicy Rice', cursive;
-    height: 100vh;
-    width: 100vw;
 }
 
 body {
     display: grid;
-    position: absolute;
-    grid-template-rows: 1 auto auto auto;
-    grid-template-columns: 1 1;
+    grid-template-rows: 15% 70% 15%;
+    grid-template-columns: 1fr;
     background-color: #ffffff;
     background-image: linear-gradient(white, white, transparent), url("project_images/perspective-grid-background-vector.jpg");
     height: 100vh;
@@ -22,78 +21,57 @@ body {
     background-size: cover;
 }
 
+
 p {
     padding: 0;
     margin: 0;
 }
 
-.header {
+header {
     background-color: rgb(90, 156, 75);
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-	justify-self: stretch;
-    align-self: stretch;
     text-align: center;
-    display: grid;
-    grid-template-columns: 1 1;
-    font-size: 3em;
+    grid-column: 1 / span 2;
+    justify-self: stretch;
+    align-self: stretch;
 }
 
 .title {
-    grid-column: 1 / 3;
-    justify-self: center;
+    text-align: center;
     text-shadow: 2px 2px 5px rgba(0, 210, 225, 0.5);
     text-decoration: underline;
+    font-size: 2.8em;
 }
 
 .bsd {
-    grid-column: 2 / 3;
-    justify-self: end;
+    text-align: end;
     font-size: .3em;
     padding: 5px;
 }
 
+.clocks {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+}
+
 .regular_digital_clock {
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
     grid-column: 1 / 2;
 	justify-self: stretch;
     align-self: stretch;
-    font-size: 2em;
+    font-size: 1.8em;
     text-align: center;
-    padding-top: 20px;
     background-image: linear-gradient(rgb(90, 156, 75), rgba(0, 210, 225, 0.3), transparent);
 }
 
 .talmudic_digital_clock {
-    grid-row: 2 / 3;
+    grid-row: 1 / 2;
 	grid-column: 2 / 3;
 	justify-self: stretch;
     align-self: stretch;
-    font-size: 2em;
+    font-size: 1.8em;
     text-align: center;
-    padding-top: 20px;
     background-image: linear-gradient(rgb(90, 156, 75), rgba(0, 210, 225, 0.3), transparent);
-}
-
-.analog_clock {
-    grid-row: 3 / 4;
-    grid-column: 1 / 3;
-	justify-self: center;
-    align-self: start;
-    display: grid;
-    grid-template-rows: 1;
-    grid-template-columns: 1;
-}
-
-.footer {
-    grid-row: 4 / 5;
-    grid-column: 1 / 3;
-	justify-self: stretch;
-    align-self: stretch;
-    padding: 5px;
-    font-size: 1em;
-    display: grid;
-    grid-template-rows: 1fr;
 }
 
 .talmudicTimeDisplay {
@@ -104,6 +82,29 @@ p {
     color: rgba(0, 0, 0, .5)
 }
 
+.analog_clock {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+	justify-self: center;
+    align-self: start;
+}
+
+#canvas {
+    background-color: transparent;
+    width: 350px;
+    height: 350px;
+}
+
+footer {
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+	justify-self: stretch;
+    align-self: center;
+    text-align: end;
+    padding: 5px;
+    font-size: 1em;
+}
+
 .settings {
     background-image: url("project_images/steampunk-gear-clock.png");
     background-color: transparent;
@@ -112,33 +113,69 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    grid-row: 1 / 2;
-    justify-self: end;
-    align-self: end;
     border: transparent;
 }
 
-/*canvas*/
-
-#canvas {
-    background-color: rgba(255, 255, 255, 0.0);
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    width: auto;
-    height: auto;
-}
-
-@media only screen and (max-width: 400px) {
-    .header {
-        font-size: 2em;
+@media only screen and (max-width: 310px) {
+    .title {
+        font-size: .3em;
     }
 
-    .digital_clocks {
+    .bsd {
+        font-size: .1em;
+    }
+
+    #canvas {
+        width: 50px;
+        height: 50px;
+    }
+
+    .regular_digital_clock {
+        font-size: .4em;
+    }
+
+    .talmudic_digital_clock {
+        font-size: .4em;
+    }
+}
+
+@media only screen and (max-width: 410px) {
+    .title {
+        font-size: 1.3em;
+    }
+
+    #canvas {
+        width: 150px;
+        height: 150px;
+    }
+
+    .regular_digital_clock {
         font-size: 1em;
+    }
+
+    .talmudic_digital_clock {
+        font-size: 1em;
+    }
+}
+
+@media only screen and (max-width: 515px) {
+    .title {
+        font-size: 1.8em;
     }
 
     #canvas {
         width: 200px;
         height: 200px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .title {
+        font-size: 2.3em;
+    }
+
+    #canvas {
+        width: 250px;
+        height: 250px;
     }
 }
