--- a/index.css
+++ b/index.css
@@ -19,6 +19,8 @@ body {
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
+    border: 3px rgba(109, 87, 13, 0.884) groove;
+    border-radius: 5px 5px 5px 5px;
 }
 
 
@@ -37,7 +39,7 @@ header {
 
 .title {
     text-align: center;
-    text-shadow: 2px 2px 5px rgba(0, 210, 225, 0.5);
+    text-shadow: 2px 2px 5px rgba(109, 87, 13, 0.884);
     text-decoration: underline;
     font-size: 2.8em;
 }
@@ -48,6 +50,7 @@ header {
     padding: 5px;
 }
 
+
 .clocks {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -55,6 +58,8 @@ header {
 }
 
 .regular_digital_clock {
+    border: 3px rgba(109, 87, 13, 0.884) ridge;
+    border-right: dotted;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
 	justify-self: stretch;
@@ -65,6 +70,8 @@ header {
 }
 
 .talmudic_digital_clock {
+    border: 3px rgba(109, 87, 13, 0.884) ridge;
+    border-left: dotted;
     grid-row: 1 / 2;
 	grid-column: 2 / 3;
 	justify-self: stretch;
