--- a/index.css
+++ b/index.css
@@ -420,6 +420,75 @@ footer {
     }
 }
 
-@media only screen and (max-width: 750px) and (max-height: 750px) and (orientation: landscape) {
+@media only screen and (orientation: landscape) and (max-height: 750px) {
+    body {
+        display: grid;
+        grid-template-rows: 1fr 50% 25%;
+        grid-template-columns: 1fr;
+        height: 100vh;
+        width: 100vw;
+    }
 
+    .title {
+        font-size: 1.2em;
+    }
+
+    .bsd {
+        font-size: .4em;
+    }
+
+    #canvas {
+        width: 100px;
+        height: 100px;
+    }
+
+    .regular_digital_clock {
+        font-size: 1em;
+    }
+
+    .talmudic_digital_clock {
+        font-size: 1em;
+    }
+
+    .settings_container {
+        font-size: .5em;
+    }
+
+    .list_container {
+        align-self: start;
+        font-size: .8em;
+        grid-template-columns: 1;
+        grid-template-rows: 1 1;
+    }
+
+    .analog_clock_header {
+        font-size: .8em;
+    }
+
+    .location_display {
+        font-size: .5em;
+    }
+
+    .list_container-insert {
+        width: 55vw;
+        height: 30vh;
+    }
+}
+
+@media only screen and (orientation: landscape) and (max-height: 325px) {
+    .settings_container {
+        align-self: start;
+    }
+
+    .settings_header {
+        margin-bottom: 3px;
+    }
+
+    .settings-button-list {
+        padding: 3px;
+    }
+
+    li {
+        margin-bottom: 4px;
+    }
 }
